# badminton-auto-downloader

./: .gitignore  README.md  bwf-draw-mac.spec  bwf-draw.spec  bwf_draw_launcher.py  pyproject.toml
.github/workflows/: build-mac.yml  build-windows.yml
bwf_draw/: browser.py  cli.py  fetcher.py  gui.py  merger.py  paths.py  url.py
